--- a/website/models.qmd
+++ b/website/models.qmd
@@ -6,12 +6,21 @@ This page is under construction.
 
 This webpage is dedicated to the presentation of the models I worked on within my Master Thesis.
 
-## Tractable model 1
+## Framework model 1
 
 This model is currently under work. 
 Its aim is to be a simplified version of the general framework I want to use. 
 
-[It can be found here](/resources/Tractable_model_1.html). 
+[It can be found here](/resources/Framework_model_1.html). 
 
+## Framework model 2
 
+This model is currently under work. 
+Its aim is to add to the general framework a continuous variable for temperature. 
 
+[It can be found here](/resources/Framework_model_2.html). 
+
+## Visualisation 
+
+I am also working on some model visualisation.
+A notebook about it can be found [here](/resources/Visualisation.html). 
