Adding information homepage.

--- a/website/index.qmd
+++ b/website/index.qmd
@@ -2,8 +2,51 @@
 title: "Modelling climate impact on economy through health"
 ---
 
-This website is currently under construction.
+Hello, I am Paulo Gugelmo Cavalheiro Dias, a student in the Master of Research in Economics at Sciences Po, and this webpage is 
+dedicated to my Master Thesis. 
 
-This is the website of my Master Thesis. 
+I would like to study the economic effect of temperature variations induced by climate change on health.
 
-You can find my working models in the [Models](models.qmd) page.
+Schematically, I would like to inquire about the red links in the following diagram: 
+
+```{mermaid}
+flowchart LR
+  A[Climate change] --> B[Temperature distribution]
+  B --> C[Other variables]
+  B --> D[Health of individuals] 
+  D --> E[Economic production]
+  C --> E
+
+linkStyle default stroke:black
+linkStyle 2 stroke:red
+linkStyle 3 stroke:red
+style D color:red
+
+classDef linkLabel fill:none,stroke:none;
+```
+
+A rich literature has identified several channels through which temperature can affect economy, among which we can mention:
+
+- Mortality
+    - Potential heatwaves could increase the mortality rates, especially for very young or elderly populations.
+- Morbidity
+    - Temperature shifts could affect the quality of live through a degraded health status.
+- Labor productivity
+    - Higher or more varying temperatures could reduce the labor productivity for blue and white collars.
+- Areas liveability
+    - Some regions will become too hot to live in and will cause migration.
+- Capital productivity
+    - Certain equipements and machines require some temperature to be useable.
+
+In this context, the potential effect of temperature shifts on health is of particular importance.
+Indeed, not only does it affect the general quality of people's life, imply new public policy trade-off in the health sector, but 
+it also has several impacts at the individual level.
+From an economic perspective, expected changes in temperature distribution 
+could lead not only to aggregated utility shocks through a change in global life conditions, but could also lead
+to different individual choices in terms of labor supply and savings.
+Given the existing findings, it is also very important to take into consideration the potential interaction effects of these 
+temperature deviation with variable creating heterogeneity in the population, such as base health types, initial income and/or wealth, etc.
+
+For now, you can find my working models in the [Models](models.qmd) page.
+
+More will come soon!
