--- a/website/index.qmd
+++ b/website/index.qmd
@@ -5,6 +5,10 @@ title: "Modelling climate impact on economy through health"
 Hello, I am Paulo Gugelmo Cavalheiro Dias, a student in the Master of Research in Economics at Sciences Po, and this webpage is 
 dedicated to my Master Thesis. 
 
+____
+
+## Overview
+
 I would like to study the economic effect of temperature variations induced by climate change on health.
 
 Schematically, I would like to inquire about the red links in the following diagram: 
@@ -47,6 +51,10 @@ to different individual choices in terms of labor supply and savings.
 Given the existing findings, it is also very important to take into consideration the potential interaction effects of these 
 temperature deviation with variable creating heterogeneity in the population, such as base health types, initial income and/or wealth, etc.
 
-For now, you can find my working models in the [Models](models.qmd) page.
+## On this website
+
+For now, you can find different versions of previous or current prototypic models I am working on in the [models page](models.qmd).
+
+As I will advance on my Master Thesis, I will try to add additional material, such as work on the literature and empirical data analysis.
 
 More will come soon!
